<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/gallery"
        android:icon="@drawable/ic_gallery"
        android:title="@string/GALLERY" />

    <item
        android:id="@+id/calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/CALENDAR" />

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/HOME" />

    <item
        android:id="@+id/database"
        android:icon="@drawable/ic_database"
        android:title="@string/DATABASE" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/PROFILE" />

</menu>